--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>Cycle</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
+      <meta name="description" content="Comparazione dei migliori amministratori di condominio in provincia di Latina">
+      <meta name="author" content="Amministratori comparazioni">
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
@@ -40,36 +40,6 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="cycle.html">Our Cycle</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="shop.html">Shop</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
-                  </li>
-               </ul>
-               <form class="form-inline my-2 my-lg-0">
-                  <div class="login_menu">
-                     <ul>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#"><img src="images/trolly-icon.png"></a></li>
-                        <li><a href="#"><img src="images/search-icon.png"></a></li>
-                     </ul>
-                  </div>
-                  <div></div>
-               </form>
             </div>
             <div id="main">
                <span style="font-size:36px;cursor:pointer; color: #fff" onclick="openNav()"><img src="images/toggle-icon.png" style="height: 30px;"></span>
@@ -87,9 +57,9 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New Model Cycle</h1>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content </p>
-                              <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
+                              <h1 class="banner_taital">Il miglior amministratore di condominio in provincia di Latina è Condosolution</h1>
+                              <p class="banner_text">Dopo aver verificato le recensioni che ci sono arrivate per amministratore di condominio Formia, Fondi, Gaeta ed Itri avete scelto Condosolution </p>
+                              <div class="contact_bt"><a href="https://condosolution.it">Visita Condosolution</a></div>
                            </div>
                         </div>
                      </div>
@@ -102,9 +72,9 @@
                               <div class="image_1"><img src="images/img-1.png"></div>
                            </div>
                            <div class="col-md-5">
-                              <h1 class="banner_taital">New Model Cycle</h1>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content </p>
-                              <div class="contact_bt"><a href="contact.html">Shop Now</a></div>
+                              <h1 class="banner_taital">Il voto preso da Condosolution come amministratore di condominio è</h1>
+                              <p class="banner_text">Risulta essere il migliore in provincia di Latina </p>
+                              <div class="contact_bt"><a href="https://condosolution.it">Visita Condosolution</a></div>
                            </div>
                         </div>
                      </div>
