--- a/index.html
+++ b/index.html
@@ -10,26 +10,47 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>Amministratore di condominio Formia | Itri | Fondi | Gaeta</title>
+      <meta name="language" content="Italian">
+      <meta name="revisit-after" content="3 days">
       <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
       <meta name="description" content="Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.">
-      <meta name="author" content="Amministratori comparazioni">
+      <meta name="author" content="Comparazioni amministratori di condominio">
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+  
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
       <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700,800&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
       <link rel="stylesoeet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+   
+   
+      <script type="application/ld+json">
+         {
+           "@context": "https://schema.org/",
+           "@type": "Article",
+           "mainEntityOfPage": {
+             "@type": "WebPage",
+             "@id": "https://amministratorecondominioformia.it/"
+           },
+           "headline": "Il miglior amministratore di condominio in provincia di Latina è Condosolution",
+           "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.",
+           "image": {
+             "@type": "ImageObject",
+             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg",
+           },
+          
+         }
+         </script>
+   
+   
    </head>
    <body>
       <!-- header section start -->
@@ -40,7 +61,7 @@
          <div class="row">
 
             <div class="col-lg-6 col-md-6 col-sm-12">
-               <img src="./images/Logo_condosolution.png" alt="" class="condosolution">
+               <img src="./images/Logo_condosolution.png" alt="logo condosolution amministratore condominio Formia, Itri, Gaeta e Fondi" class="condosolution">
 
                <div class="row rating-row">
 
@@ -117,7 +138,7 @@
                      <h1 class="cycles_text">Reperibilità e formazione</h1>
                      <p class="lorem_text">I condomini si dicono contenti della reperibilità dell'amministratore in termini di giorni e di mezzi di comunicazione. L'amministratore di condominio Condosolution è reperibile tramite mail, whatsapp, chiamata, nonchè fisicamente su appuntamento. <br> L'amministratore segue i corsi di aggiornamento come da DM 140/2014, risulta regolarmente iscritto ad un'associazione di categoria, possiede partita iva e, anche se non indispensabile, i condomini si dicono contenti della formazione di Dario Petralia "ditta Condosolution" (diploma in ragioneria e laurea in giurisprudenza. ) </p>
                      <div class="btn_main">
-                        <div class="buy_bt"><a href="https://www.brocardi.it/disposizioni-per-attuazione-del-codice-civile/capo-i/sezione-iii/art71bis.html">Chi può essere amministratore</a></div>
+                        <div class="buy_bt"><a href="https://www.brocardi.it/disposizioni-per-attuazione-del-codice-civile/capo-i/sezione-iii/art71bis.html">Chi può fare l'amministratore</a></div>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -155,13 +176,13 @@
       <div class="about_section layout_padding">
          <div class="container">
             <h1 class="about_taital">Su Dario Petralia - Condosolution</h1>
-            <p class="about_text"> Ha uno studio a Formia, in Via G. Rossini 19 ed uno a Fondi, in via Roma 117. Puoi visitare il suo sito web
+            <p class="about_text"> Ha uno studio a Formia, in Via G. Rossini 19 ed uno a Fondi, in via Roma 115. Puoi visitare il suo sito web
             </p>
             <div class="about_main">
                <a href="https://condosolution.it">
-               <img src="images/dario-petralia-condosolution.jpg" class="image_5"></a>
+               <img src="images/dario-petralia-condosolution.jpg"  alt="Dario Petralia, amministratore di condominio a Formia, Fondi, Itri, Gaeta" class="image_5"></a>
             </div>
-            <div class="read_bt_1"><a href="https://condosolution.it"> Visita il sito</a></div>
+            <div class="read_bt_1"><a href="https://condosolution.it"> Vai al sito</a></div>
          </div>
       </div>
       <!-- about section end -->
@@ -177,7 +198,6 @@
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
       <!-- javascript --> 
-      <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
      
    </body>
