--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
       <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700,800&display=swap" rel="stylesheet">
-      <link rel="stylesoeet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    
    
@@ -119,7 +119,7 @@
                   <div class="col-md-6">
                      <div class="box_main">
                         <h6 class="number_text">01</h6>
-                        <div class="image_2"><img src="images/sito_web_condominiale.jpg"></div>
+                        <div class="image_2"><img src="images/sito_web_condominiale.jpg" alt="immagine di una scrivania ed un computer, l'amministratore di condominio a Formia di nome Condosolution è aggiornato alla normativa ex art. 71 ter disposizioni attuative del codice civile"></div>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -144,7 +144,7 @@
                   <div class="col-md-6">
                      <div class="box_main_3">
                         <h6 class="number_text_2">02</h6>
-                        <div class="image_2"><img src="images/reperibilità.jpg"></div>
+                        <div class="image_2"><img src="images/reperibilità.jpg" alt="un telefono fisso su una scrivania, simboleggia che l'amministratore di condominio Dario Petralia è sempre reperibile per qualsiasi chiarimento dei condomini"></div>
                      </div>
                   </div>
                </div>
