--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
       <title>Amministratore di condominio Formia | Itri | Fondi | Gaeta</title>
+      <meta name="google-site-verification" content="nAYqxYCYxFx1_Sy6I-ICp28SeMmjiIgmVpKF-Iw2shU" />
       <meta name="language" content="Italian">
       <meta name="revisit-after" content="3 days">
       <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
