--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
             <div class="col-lg-6 col-md-6 col-sm-12">
                <img src="./images/Logo_condosolution.png" alt="logo condosolution amministratore condominio Formia, Itri, Gaeta e Fondi" class="condosolution">
-
+            
                <div class="row rating-row">
-
+                 
                   <fieldset class="rating-container">	
                      <input type="radio" name="rating" id="rate5">
                      <label for="rate5">
@@ -90,6 +90,14 @@
                   </fieldset>
                </div>
 
+   
+
+            </div>
+
+            <div class="circle">
+               <svg class="circle" height="350" width="350">
+                  <circle cx="150" cy="150" r="150"  fill="rgb(27, 172, 145, 0.3)" />
+                </svg>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
