--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta name="revisit-after" content="3 days">
       <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
       <meta name="description" content="Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.">
-      <meta name="author" content="Comparazioni amministratori di condominio">
+      <meta name="author" content="Amministratore di condominio a Formia">
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
