--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
              "@type": "WebPage",
              "@id": "https://amministratorecondominioformia.it/"
            },
-           "headline": "Il miglior amministratore di condominio in provincia di Latina è Condosolution",
+           "headline": "Il miglior amministratore di condominio a Formia è Condosolution",
            "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.",
            "image": {
              "@type": "ImageObject",
@@ -99,8 +99,8 @@
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
-               <h1 class="cycles_text">Il miglior amministratore di condominio in provincia di Latina</h1>
-               <p class="lorem_text">Dalle recensioni dei clienti il miglior amministratore di condominio a Formia, Itri, Fondi e Gaeta risulta essere Condosolution</p>
+               <h1 class="cycles_text">Il miglior amministratore di condominio a Formia</h1>
+               <p class="lorem_text">Dalle recensioni dei clienti il miglior amministratore di condominio a Formia risulta essere Condosolution</p>
                <div class="btn_main">
                   <div class="buy_bt"><a href="https://condosolution.it">Visita il sito</a></div>
                   <h4 class="price_text">Amministrazione a partire da <span style=" color: #f7c17b">€</span> <span style=" color: #325662">480 (oltre iva ed oneri previdenziali)</span></h4>
