--- a/index.html
+++ b/index.html
@@ -31,22 +31,18 @@
    
    
       <script type="application/ld+json">
-         {
-           "@context": "https://schema.org/",
-           "@type": "Article",
-           "mainEntityOfPage": {
-             "@type": "WebPage",
-             "@id": "https://amministratorecondominioformia.it/"
-           },
-           "headline": "Il miglior amministratore di condominio a Formia è Condosolution",
-           "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.",
-           "image": {
-             "@type": "ImageObject",
-             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg",
-           },
-          
-         }
-         </script>
+
+            {
+              "@context": "https://schema.org/",
+              "@type": "Article",
+              "name": "Miglior amministratore di condominio a Formia",
+              "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio a Formia",
+              "about": {
+                "@type": "CommunicateAction",
+                "name": "Recensione miglior amministratore di condominio Formia"
+              },
+            }
+            </script>
    
    
    </head>
