--- a/index.html
+++ b/index.html
@@ -31,18 +31,25 @@
    
    
       <script type="application/ld+json">
+         {
+           "@context": "https://schema.org/",
+           "@type": "Article",
+           "mainEntityOfPage": {
+             "@type": "WebPage",
+             "@id": "https://amministratorecondominioformia.it/"
+           },
+           "headline": "Il miglior amministratore di condominio a Formia è Condosolution",
+           "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio a Formia",
+           "image": {
+             "@type": "ImageObject",
+             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg",
+           }
+         }
 
-            {
-              "@context": "https://schema.org/",
-              "@type": "Article",
-              "name": "Miglior amministratore di condominio a Formia",
-              "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio a Formia",
-              "about": {
-                "@type": "CommunicateAction",
-                "name": "Recensione miglior amministratore di condominio Formia"
-              }
-            }
-      </script>
+
+
+         
+         </script>
    
    
    </head>
@@ -95,7 +102,7 @@
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
-               <h1 class="cycles_text">Il miglior amministratore di condominio a Formia</h1>
+               <h1 class="cycles_text">Il miglior amministratore di condominio a Formia è Condosolution</h1>
                <p class="lorem_text">Dalle recensioni dei clienti il miglior amministratore di condominio a Formia risulta essere Condosolution</p>
                <div class="btn_main">
                   <div class="buy_bt"><a href="https://condosolution.it">Visita il sito</a></div>
