--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            "description": "Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio a Formia",
            "image": {
              "@type": "ImageObject",
-             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg",
+             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg"
            }
          }
 
