--- a/immobili-a-formia/index.html
+++ b/immobili-a-formia/index.html
@@ -40,15 +40,14 @@
            "@type": "Article",
            "mainEntityOfPage": {
              "@type": "WebPage",
-             "@id": "https://amministratorecondominioformia.it/"
+             "@id": "https://amministratorecondominioformia.it/immobili-a-formia"
            },
            "headline": "Comprare casa a Formia nel 2023 conviene?",
            "description": "Inflazione, immobili, economia,...ti spiego perché i prezzi degli immobili a Formia continueranno a scendere",
            "image": {
              "@type": "ImageObject",
-             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg",
-           },
-          
+             "url": "https://amministratorecondominioformia.it/images/dario-petralia-condosolution.jpg"
+           }
          }
          </script>
    
@@ -94,6 +93,26 @@
 
  </section>
  <!-- header section end --> 
+
+
+ <!--Section no track start-->
+ <section class="text-center px-md-5 mx-md-5 dark-grey-text">
+           
+  <div class="row mb-5">
+    <div class="col-md-4 mx-auto">
+      <div class="view mb-4 pb-2">
+        <img src="https://mdbootstrap.com/img/illustrations/undraw_connected_world_wuay.svg" class="img-fluid" alt="smaple image">
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-12 col-md-12">
+   <h1 class="cycle_taital">Questo sito non ti traccia, <mark>neanche</mark> attraverso pseudonomizzazione</h1>
+   <p class="lorem_text">Conosciamo solo il numero totale di visite alle nostre pagine web in relazione al periodo</p>
+  </div>
+
+</section>
+<!--Section no track end-->
 
 <div class="container my-5">
 
