--- a/immobili-a-formia/index.html
+++ b/immobili-a-formia/index.html
@@ -83,7 +83,7 @@
           <h1 class="cycles_text">Comprare casa a Formia</h1>
           <p class="lorem_text">Ci sono affari da fare? Conviene acquistare casa nel 2023 a Formia?</p>
           <div class="btn_main">
-            <div class="buy_bt"><a href="https://amministratorecondominioformia/immobili-a-formia.it/#analisi">Leggi l'articolo</a></div>
+            <div class="buy_bt"><a href="https://amministratorecondominioformia.it/immobili-a-formia/#analisi">Leggi l'articolo</a></div>
          </div>
        </div>
         
