--- a/immobili-a-formia/index.html
+++ b/immobili-a-formia/index.html
@@ -107,7 +107,7 @@
   </div>
 
   <div class="col-lg-12 col-md-12">
-   <h1 class="cycle_taital">Questo sito non ti traccia, <mark>neanche</mark> attraverso pseudonomizzazione</h1>
+   <h1 class="cycle_taital">Questo sito non ti traccia, <mark>neanche</mark> attraverso pseudonimo</h1>
    <p class="lorem_text">Conosciamo solo il numero totale di visite alle nostre pagine web in relazione al periodo</p>
   </div>
 
