--- a/dario-petralia/index.html
+++ b/dario-petralia/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
     <meta name="description" content="Dario Petralia è un amministratore di condominio a Formia, con sede in Via Gioacchino Rossini 19. Preventivi gratuiti in 24h">
-
+    <link rel="canonical" href="https://amministratorecondominioformia.it/dario-petralia" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
