--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <meta name="keywords" content="amministratore di condominio Formia, amministratore di condominio Itri, amministratore di condominio Fondi, amministratore di condominio Gaeta">
       <meta name="description" content="Il migliore amministratore di condominio a Formia è Condosolution, di Dario Petralia. Comparazione dei migliori amministratori di condominio in provincia di Latina.">
       <meta name="author" content="Amministratore di condominio a Formia">
+      <link rel="canonical" href="https://amministratorecondominioformia.it">
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
